# NewNoteForest

./: .env.example  .gitignore  ecosystem.config.js  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .env.example  esbuild.config.mjs  package.json
backend/prisma/: prisma.config.mjs  schema.prisma
backend/src/: index.ts
backend/src/api/: auth.routes.ts  index.ts  note.routes.ts  test.routes.ts
backend/src/config/: env.config.ts  index.ts  server.config.ts
backend/src/database/: client.database.ts  index.ts
backend/src/handlers/: error.handler.ts  index.ts
backend/src/middleware/: auth.middleware.ts  index.ts
backend/src/services/: auth.service.ts  auth.ts  index.ts  note.service.ts  session.service.ts
backend/src/utils/: dir.utils.ts  index.ts  log.utils.ts
frontend/: index.html  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  ThemedApp.tsx  main.tsx
frontend/src/api/: adapter.ts  auth.ts  index.ts  notes.ts
frontend/src/components/: ConfirmDialog.tsx  GlobalSnackbar.tsx  MarkdownRenderer.tsx  NoteEditor.tsx  NoteSidebar.tsx  NoteTabBar.tsx  SettingsDialog.tsx
frontend/src/lib/: markdownExport.ts  rehypeQuoteHighlight.ts
frontend/src/locales/: en.ts  ko.ts
frontend/src/pages/: LoginPage.tsx  NotePage.tsx  SetupPasswordPage.tsx  WelcomePage.tsx
frontend/src/ref/: MarkdownRenderer.tsx
frontend/src/stores/: authStore.ts  noteStore.ts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  notes.rs
types/: package.json
types/src/: index.ts  note.ts
(+6 files in other folders)
