[package]
name = "noteforest-desktop"
version = "1.0.0"
description = "NoteForest Desktop App"
authors = ["shirosaki-hana"]
edition = "2021"
license = "MIT"

[lib]
name = "noteforest_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
regex = "1"
thiserror = "1"
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

